# llvm-collagist

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  rust_sample.ll
include/: DebugInfo.h  Extractor.h
include/utils/: Logger.h
includes/utils/: trim.hpp
src/: DebugInfo.cpp  Extractor.cpp  main.cpp  main.go
src/utils/: Logger.cpp
test/test_data/: output.ll  output_strip.ll  test_rust.json  test_rust.ll  test_rust_filt.ll
testdata/: rust_sample.ll
